DDDP 1420: Fix text content cell handling overflow, width etc

--- a/web/admin/src/App.css
+++ b/web/admin/src/App.css
@@ -45,6 +45,7 @@ body {
   font-size: 16px;
   padding: 0px;
   margin: 3px;
+  width: 240px;
   text-align: center;
   white-space: nowrap;
   text-overflow: ellipsis;
@@ -173,9 +174,7 @@ body {
   padding: 0px;
   margin: 3px;
   text-align: center;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  overflow: hidden;
+  width: 240px;
 }
 
 .surveyCellText {
